Hide scrollbars again due webkit glitch; fix

--- a/src/app/assets/_layout.less
+++ b/src/app/assets/_layout.less
@@ -153,7 +153,8 @@ html, body {
     }
 
     tbody {
-      width: 100%;
+      width: 110%;
+      padding-right: 10%;
       position: absolute;
       overflow: auto;
       bottom: @Pad1;
